smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/parse-errors/expected-shape-name-but-eof.smithy
// Syntax error at line 4, column 7: Expected SPACE(' ') but found NEWLINE('\n') | Model
namespace com.foo

string
